# MPL-Graphics-Project

./: .gitignore  Album.cpp  Album.h  BarGraph.cpp  BarGraph.h  Button.cpp  CMakeLists.txt  Graphics.cpp  Graphics.h  PopSong.cpp  PopSong.h  README.md  RapSong.cpp  RapSong.h  Song.cpp  Song.h  SongV2.cpp  SongV2.h  SubmitButton.cpp  SubmitButton.h  graphics.cpp  graphics.h  lyrics.py  main.cpp  spotify.py
